--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="span4">
           <h2>Open Source</h2>
-          <p>Se Builder is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2 License</a>, and is hosted on <a href="http://github.com/admc/se-build">Github</a>. We really encourage community involvement logging bugs and helping us fix and improve the codebase.</p>
+          <p>Se Builder is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache 2 License</a>, and is hosted on <a href="http://github.com/admc/se-builder">Github</a>. We really encourage community involvement logging bugs and helping us fix and improve the codebase.</p>
           <p><a class="btn" href="https://github.com/admc/se-builder/wiki/OSS-Policy">Read More &raquo;</a></p>
         </div>
         <div class="span4">
